--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
     command: pnpm dev
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-      - /app/.pnpm-store
+      - frontend_node_modules:/app/node_modules
+      - /app/.next
     ports:
       - "3000:3000"
     environment:
@@ -56,3 +56,4 @@ services:
 
 volumes:
   postgres_data:
+  frontend_node_modules:
