--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     command: pnpm dev
     volumes:
       - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
+      - /app/node_modules
       - /app/.next
     ports:
       - "3000:3000"
@@ -56,4 +56,3 @@ services:
 
 volumes:
   postgres_data:
-  frontend_node_modules:
